@@ -7768,7 +7768,318 @@ namespace DiscImageChef.Decoders.SCSI
             return sb.ToString();
         }
 
-        #endregion IBM Mode Page 0x24: Drive Capabilities Control Mode page
+        #endregion IBM Mode Page 0x3D: Behaviour Configuration Mode page
+
+        #region HP Mode Page 0x3B: Serial Number Override Mode page
+        public struct HP_ModePage_3B
+        {
+            /// <summary>
+            /// Parameters can be saved
+            /// </summary>
+            public bool PS;
+            public byte MSN;
+            public byte[] SerialNumber;
+        }
+
+        public static HP_ModePage_3B? DecodeHPModePage_3B(byte[] pageResponse)
+        {
+            if(pageResponse == null)
+                return null;
+
+            if((pageResponse[0] & 0x40) == 0x40)
+                return null;
+
+            if((pageResponse[0] & 0x3F) != 0x3B)
+                return null;
+
+            if(pageResponse[1] + 2 != pageResponse.Length)
+                return null;
+
+            if(pageResponse.Length != 16)
+                return null;
+
+            HP_ModePage_3B decoded = new HP_ModePage_3B();
+
+            decoded.PS |= (pageResponse[0] & 0x80) == 0x80;
+            decoded.MSN = (byte)(pageResponse[2] & 0x03);
+            decoded.SerialNumber = new byte[10];
+            Array.Copy(pageResponse, 6, decoded.SerialNumber, 0, 10);
+
+            return decoded;
+        }
+
+        public static string PrettifyHPModePage_3B(byte[] pageResponse)
+        {
+            return PrettifyHPModePage_3B(DecodeHPModePage_3B(pageResponse));
+        }
+
+        public static string PrettifyHPModePage_3B(HP_ModePage_3B? modePage)
+        {
+            if(!modePage.HasValue)
+                return null;
+
+            HP_ModePage_3B page = modePage.Value;
+            StringBuilder sb = new StringBuilder();
+
+            sb.AppendLine("HP Serial Number Override Mode Page:");
+
+            if(page.PS)
+                sb.AppendLine("\tParameters can be saved");
+
+            switch(page.MSN)
+            {
+                case 1:
+                    sb.AppendLine("\tSerial number is the manufacturer's default value");
+                    break;
+                case 3:
+                    sb.AppendLine("\tSerial number is not the manufacturer's default value");
+                    break;
+            }
+
+            sb.AppendFormat("\tSerial number: {0}", StringHandlers.CToString(page.SerialNumber)).AppendLine();
+
+            return sb.ToString();
+        }
+
+        #endregion HP Mode Page 0x3B: Serial Number Override Mode page
+
+        #region HP Mode Page 0x3C: Device Time Mode page
+        public struct HP_ModePage_3C
+        {
+            /// <summary>
+            /// Parameters can be saved
+            /// </summary>
+            public bool PS;
+            public bool LT;
+            public bool WT;
+            public bool PT;
+            public ushort CurrentPowerOn;
+            public uint PowerOnTime;
+            public bool UTC;
+            public bool NTP;
+            public uint WorldTime;
+            public byte LibraryHours;
+            public byte LibraryMinutes;
+            public byte LibrarySeconds;
+            public uint CumulativePowerOn;
+        }
+
+        public static HP_ModePage_3C? DecodeHPModePage_3C(byte[] pageResponse)
+        {
+            if(pageResponse == null)
+                return null;
+
+            if((pageResponse[0] & 0x40) == 0x40)
+                return null;
+
+            if((pageResponse[0] & 0x3F) != 0x3C)
+                return null;
+
+            if(pageResponse[1] + 2 != pageResponse.Length)
+                return null;
+
+            if(pageResponse.Length != 36)
+                return null;
+
+            HP_ModePage_3C decoded = new HP_ModePage_3C();
+
+            decoded.PS |= (pageResponse[0] & 0x80) == 0x80;
+            decoded.LT |= (pageResponse[2] & 0x04) == 0x04;
+            decoded.WT |= (pageResponse[2] & 0x02) == 0x02;
+            decoded.PT |= (pageResponse[2] & 0x01) == 0x01;
+            decoded.CurrentPowerOn = (ushort)((pageResponse[6] << 8) + pageResponse[7]);
+            decoded.PowerOnTime = (uint)((pageResponse[8] << 24) + (pageResponse[9] << 16) + (pageResponse[10] << 8) + pageResponse[11]);
+            decoded.UTC |= (pageResponse[14] & 0x02) == 0x02;
+            decoded.NTP |= (pageResponse[14] & 0x01) == 0x01;
+            decoded.WorldTime = (uint)((pageResponse[16] << 24) + (pageResponse[17] << 16) + (pageResponse[18] << 8) + pageResponse[19]);
+            decoded.LibraryHours = pageResponse[23];
+            decoded.LibraryMinutes = pageResponse[24];
+            decoded.LibrarySeconds = pageResponse[25];
+            decoded.CumulativePowerOn = (uint)((pageResponse[32] << 24) + (pageResponse[33] << 16) + (pageResponse[34] << 8) + pageResponse[35]);
+
+            return decoded;
+        }
+
+        public static string PrettifyHPModePage_3C(byte[] pageResponse)
+        {
+            return PrettifyHPModePage_3C(DecodeHPModePage_3C(pageResponse));
+        }
+
+        public static string PrettifyHPModePage_3C(HP_ModePage_3C? modePage)
+        {
+            if(!modePage.HasValue)
+                return null;
+
+            HP_ModePage_3C page = modePage.Value;
+            StringBuilder sb = new StringBuilder();
+
+            sb.AppendLine("HP Device Time Mode Page:");
+
+            if(page.PS)
+                sb.AppendLine("\tParameters can be saved");
+
+            if(page.PT)
+            {
+                sb.AppendFormat("\tDrive has been powered up {0} times", page.CurrentPowerOn);
+                sb.AppendFormat("\tDrive has been powered up since {0} this time", TimeSpan.FromSeconds(page.PowerOnTime)).AppendLine();
+                sb.AppendFormat("\tDrive has been powered up a total of {0}", TimeSpan.FromSeconds(page.CumulativePowerOn)).AppendLine();
+            }
+
+            if(page.WT)
+            {
+                sb.AppendFormat("\tDrive's date/time is: {0}", DateHandlers.UNIXUnsignedToDateTime(page.WorldTime)).AppendLine();
+                if(page.UTC)
+                    sb.AppendLine("\tDrive's time is UTC");
+                if(page.NTP)
+                    sb.AppendLine("\tDrive's time is synchronized with a NTP source");
+            }
+
+            if(page.LT)
+                sb.AppendFormat("\tLibrary time is {0}", new DateTime(DateTime.Now.Year, DateTime.Now.Month, DateTime.Now.Day, page.LibraryHours, page.LibraryMinutes, page.LibrarySeconds)).AppendLine();
+
+            return sb.ToString();
+        }
+
+        #endregion HP Mode Page 0x3C: Device Time Mode page
+
+        #region HP Mode Page 0x3D: Extended Reset Mode page
+        public struct HP_ModePage_3D
+        {
+            /// <summary>
+            /// Parameters can be saved
+            /// </summary>
+            public bool PS;
+            public byte ResetBehaviour;
+        }
+
+        public static HP_ModePage_3D? DecodeHPModePage_3D(byte[] pageResponse)
+        {
+            if(pageResponse == null)
+                return null;
+
+            if((pageResponse[0] & 0x40) == 0x40)
+                return null;
+
+            if((pageResponse[0] & 0x3F) != 0x3D)
+                return null;
+
+            if(pageResponse[1] + 2 != pageResponse.Length)
+                return null;
+
+            if(pageResponse.Length != 4)
+                return null;
+
+            HP_ModePage_3D decoded = new HP_ModePage_3D();
+
+            decoded.PS |= (pageResponse[0] & 0x80) == 0x80;
+            decoded.ResetBehaviour = (byte)(pageResponse[2] & 0x03);
+
+            return decoded;
+        }
+
+        public static string PrettifyHPModePage_3D(byte[] pageResponse)
+        {
+            return PrettifyHPModePage_3D(DecodeHPModePage_3D(pageResponse));
+        }
+
+        public static string PrettifyHPModePage_3D(HP_ModePage_3D? modePage)
+        {
+            if(!modePage.HasValue)
+                return null;
+
+            HP_ModePage_3D page = modePage.Value;
+            StringBuilder sb = new StringBuilder();
+
+            sb.AppendLine("HP Extended Reset Mode Page:");
+
+            if(page.PS)
+                sb.AppendLine("\tParameters can be saved");
+
+            switch(page.ResetBehaviour)
+            {
+                case 0:
+                    sb.AppendLine("\tNormal reset behaviour");
+                    break;
+                case 1:
+                    sb.AppendLine("\tDrive will flush and position itself on a LUN or target reset");
+                    break;
+                case 2:
+                    sb.AppendLine("\tDrive will maintain position on a LUN or target reset");
+                    break;
+            }
+
+            return sb.ToString();
+        }
+
+        #endregion HP Mode Page 0x3D: Extended Reset Mode page
+
+        #region HP Mode Page 0x3E: CD-ROM Emulation/Disaster Recovery Mode page
+        public struct HP_ModePage_3E
+        {
+            /// <summary>
+            /// Parameters can be saved
+            /// </summary>
+            public bool PS;
+            public bool NonAuto;
+            public bool CDmode;
+        }
+
+        public static HP_ModePage_3E? DecodeHPModePage_3E(byte[] pageResponse)
+        {
+            if(pageResponse == null)
+                return null;
+
+            if((pageResponse[0] & 0x40) == 0x40)
+                return null;
+
+            if((pageResponse[0] & 0x3F) != 0x3E)
+                return null;
+
+            if(pageResponse[1] + 2 != pageResponse.Length)
+                return null;
+
+            if(pageResponse.Length != 4)
+                return null;
+
+            HP_ModePage_3E decoded = new HP_ModePage_3E();
+
+            decoded.PS |= (pageResponse[0] & 0x80) == 0x80;
+            decoded.NonAuto |= (pageResponse[2] & 0x02) == 0x02;
+            decoded.CDmode|= (pageResponse[2] & 0x01) == 0x01;
+
+            return decoded;
+        }
+
+        public static string PrettifyHPModePage_3E(byte[] pageResponse)
+        {
+            return PrettifyHPModePage_3E(DecodeHPModePage_3E(pageResponse));
+        }
+
+        public static string PrettifyHPModePage_3E(HP_ModePage_3E? modePage)
+        {
+            if(!modePage.HasValue)
+                return null;
+
+            HP_ModePage_3E page = modePage.Value;
+            StringBuilder sb = new StringBuilder();
+
+            sb.AppendLine("HP CD-ROM Emulation/Disaster Recovery Mode Page:");
+
+            if(page.PS)
+                sb.AppendLine("\tParameters can be saved");
+
+            if(page.CDmode)
+                sb.AppendLine("\tDrive is emulating a CD-ROM drive");
+            else
+                sb.AppendLine("\tDrive is not emulating a CD-ROM drive");
+            if(page.NonAuto)
+                sb.AppendLine("\tDrive will not exit emulation automatically");
+
+            return sb.ToString();
+        }
+
+        #endregion HP Mode Page 0x3E: CD-ROM Emulation/Disaster Recovery Mode page
+
     }
 }
 
