@@ -1,5 +1,12 @@
 2016-10-14  Natalia Portillo  <claunia@claunia.com>
 
+	* EVPD.cs:
+	* Modes.cs:
+	* Inquiry.cs: Added HP vendor EVPD, MODE pages and INQUIRY
+	fields.
+
+2016-10-14  Natalia Portillo  <claunia@claunia.com>
+
 	* EVPD.cs: Added EVPD pages B1h, B2h, B3h and B4h.
 
 2016-10-13  Natalia Portillo  <claunia@claunia.com>
